Authentcation updates